cmake_minimum_required(VERSION 3.10)
project(libcss C)

# Options
option(BUILD_SHARED_LIBS "Build shared libraries" OFF)

# Dependencies in external/
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/libwapcaplet/CMakeLists.txt")
    add_subdirectory(external/libwapcaplet)
    set(WAPCAPLET_FOUND TRUE)
    set(WAPCAPLET_LIBRARIES wapcaplet)
    set(WAPCAPLET_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/external/libwapcaplet/include")
endif()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/libparserutils/CMakeLists.txt")
    add_subdirectory(external/libparserutils)
    set(PARSERUTILS_FOUND TRUE)
    set(PARSERUTILS_LIBRARIES parserutils)
    set(PARSERUTILS_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/external/libparserutils/include")
endif()

# Fallback to PkgConfig if not in external/
if(NOT WAPCAPLET_FOUND OR NOT PARSERUTILS_FOUND)
    find_package(PkgConfig QUIET)
    if(PKG_CONFIG_FOUND)
        if(NOT WAPCAPLET_FOUND)
            pkg_check_modules(WAPCAPLET libwapcaplet)
        endif()
        if(NOT PARSERUTILS_FOUND)
            pkg_check_modules(PARSERUTILS libparserutils)
        endif()
    endif()
endif()

# Manual Fallback
if(NOT WAPCAPLET_FOUND)
    find_path(WAPCAPLET_INCLUDE_DIR libwapcaplet/libwapcaplet.h)
    find_library(WAPCAPLET_LIBRARY NAMES wapcaplet)
    if(WAPCAPLET_INCLUDE_DIR AND WAPCAPLET_LIBRARY)
        set(WAPCAPLET_FOUND TRUE)
        set(WAPCAPLET_INCLUDE_DIRS ${WAPCAPLET_INCLUDE_DIR})
        set(WAPCAPLET_LIBRARIES ${WAPCAPLET_LIBRARY})
    endif()
endif()

if(NOT PARSERUTILS_FOUND)
    find_path(PARSERUTILS_INCLUDE_DIR parserutils/parserutils.h)
    find_library(PARSERUTILS_LIBRARY NAMES parserutils)
    if(PARSERUTILS_INCLUDE_DIR AND PARSERUTILS_LIBRARY)
        set(PARSERUTILS_FOUND TRUE)
        set(PARSERUTILS_INCLUDE_DIRS ${PARSERUTILS_INCLUDE_DIR})
        set(PARSERUTILS_LIBRARIES ${PARSERUTILS_LIBRARY})
    endif()
endif()

if(NOT WAPCAPLET_FOUND OR NOT PARSERUTILS_FOUND)
    message(WARNING "LibWapcaplet or LibParserUtils not found. Please set WAPCAPLET_INCLUDE_DIR, WAPCAPLET_LIBRARY, etc.")
endif()

# Common definitions
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-Dinline=__inline)
    add_definitions(-Dstrncasecmp=_strnicmp -Dstrcasecmp=_stricmp)
    add_definitions(-Drestrict=__restrict)
    set(CMAKE_C_STANDARD 99)
    set(CMAKE_C_STANDARD_REQUIRED ON)
else()
    add_definitions(-D_BSD_SOURCE -D_DEFAULT_SOURCE)
    set(CMAKE_C_STANDARD 99)
endif()

include_directories(include src)
include_directories(${WAPCAPLET_INCLUDE_DIRS})
include_directories(${PARSERUTILS_INCLUDE_DIRS})

# Host tool: gen_parser
add_executable(gen_parser src/parse/properties/css_property_parser_gen.c)
if(MSVC)
    target_compile_definitions(gen_parser PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()

# Code generation script
set(GEN_PROPS_PY ${CMAKE_CURRENT_SOURCE_DIR}/gen_props.py)
set(PROPERTIES_GEN ${CMAKE_CURRENT_SOURCE_DIR}/src/parse/properties/properties.gen)
set(AUTOGEN_PROP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/parse/properties)

# Find Python
find_package(Python3 REQUIRED)

# Extract property names from properties.gen during configuration
execute_process(
    COMMAND ${Python3_EXECUTABLE} ${GEN_PROPS_PY} --list ${PROPERTIES_GEN}
    OUTPUT_VARIABLE PROP_NAMES_OUT
    RESULT_VARIABLE PROP_NAMES_RES
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

if(NOT PROP_NAMES_RES EQUAL 0)
    message(FATAL_ERROR "Failed to extract property names from properties.gen")
endif()

string(REPLACE "\n" ";" PROP_NAMES "${PROP_NAMES_OUT}")

set(AUTOGEN_SOURCES "")
foreach(PROP ${PROP_NAMES})
    list(APPEND AUTOGEN_SOURCES ${AUTOGEN_PROP_DIR}/autogenerated_${PROP}.c)
endforeach()

add_custom_command(
    OUTPUT ${AUTOGEN_SOURCES}
    COMMAND ${Python3_EXECUTABLE} ${GEN_PROPS_PY} $<TARGET_FILE:gen_parser> ${PROPERTIES_GEN} ${AUTOGEN_PROP_DIR}
    DEPENDS gen_parser ${PROPERTIES_GEN} ${GEN_PROPS_PY}
    COMMENT "Generating property parsers"
)

# Code generation: select_generator
set(SELECT_GEN src/select/select_generator.py)
set(SELECT_AUTOGEN_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/select/autogenerated_computed.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/select/autogenerated_propset.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/select/autogenerated_propget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/select/autogenerated_destroy.inc
)
add_custom_command(
    OUTPUT ${SELECT_AUTOGEN_FILES}
    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${SELECT_GEN}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/select
    DEPENDS ${SELECT_GEN} src/select/select_config.py src/select/assets.py src/select/overrides.py
    COMMENT "Running select_generator.py"
)

# Library sources
file(GLOB LIB_SRC_ROOT src/*.c)
file(GLOB LIB_SRC_CHARSET src/charset/*.c)
file(GLOB LIB_SRC_LEX src/lex/*.c)
file(GLOB LIB_SRC_PARSE src/parse/*.c)
file(GLOB LIB_SRC_PARSE_PROP src/parse/properties/*.c)
file(GLOB LIB_SRC_SELECT src/select/*.c)
file(GLOB LIB_SRC_SELECT_PROP src/select/properties/*.c)
file(GLOB LIB_SRC_UTILS src/utils/*.c)

set(LIB_SOURCES 
    ${LIB_SRC_ROOT}
    ${LIB_SRC_CHARSET}
    ${LIB_SRC_LEX}
    ${LIB_SRC_PARSE}
    ${LIB_SRC_PARSE_PROP}
    ${LIB_SRC_SELECT}
    ${LIB_SRC_SELECT_PROP}
    ${LIB_SRC_UTILS}
)

# Exclude generator and autogenerated files from glob to avoid duplicates
list(REMOVE_ITEM LIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/parse/properties/css_property_parser_gen.c)
foreach(AUTOSRC ${AUTOGEN_SOURCES})
    list(REMOVE_ITEM LIB_SOURCES ${AUTOSRC})
endforeach()

add_library(css ${LIB_SOURCES} ${AUTOGEN_SOURCES} ${SELECT_AUTOGEN_FILES})
target_link_libraries(css ${WAPCAPLET_LIBRARIES} ${PARSERUTILS_LIBRARIES})

if(MSVC)
    target_compile_options(css PRIVATE /wd4244 /wd4267 /wd4018)
endif()

# Installation
install(TARGETS css DESTINATION lib)
install(DIRECTORY include/libcss DESTINATION include)

# Tests
enable_testing()
set(TEST_SRCS
    csdetect.c
    css21.c
    lex.c
    lex-auto.c
    number.c
    parse.c
    parse-auto.c
    parse2-auto.c
    select.c
    select2.c
)

foreach(TSRC ${TEST_SRCS})
    get_filename_component(TNAME ${TSRC} NAME_WE)
    add_executable(test_${TNAME} test/${TSRC})
    target_link_libraries(test_${TNAME} css)
    add_test(NAME ${TNAME} COMMAND test_${TNAME})
endforeach()
